# rtmpserverMagic-eye

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  playlist.m3u8  test.txt
.github/workflows/: rust-clippy.yml  snyk-infrastructure.yml
api/: Cargo.toml
api/src/: api.rs  lib.rs
api/src/controller/: controller_rtmp.rs  mod.rs
api/src/service/: rtmp_server.rs
src/: main.rs
src/api/: mod.rs
src/api/controller/: mod.rs
src/api/service/: mod.rs  rtmp_server.rs
src/service/: rtmp_server.rs
