[package]
default-run = "rtmpserver"
name = "rtmpserver"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Toulouse"]
description = "A simple rtmp server"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gstreamer = "0.20.7"
#gstreamer-app = "0.20.7"
actix-web = "4.3.1"
#gstreamer-video = "0.20.7"serde = "1.0"
#rtmp = "0.3.1"
log = "0.4.19"
env_logger = "0.10.0"
api = { path = "./api" }


[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"
