[package]
name = "api"
version = "0.1.0"
authors = ["Thomas Toulouse"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]
name = "api"
path = "src/lib.rs"

[dependencies]
actix-web = "4.3.1"
serde_json = "1.0"
streamhub = "0.1.0"
tokio = { version = "1", features = ["full"] }
rtmp = "0.4.0"
anyhow = "1.0.40"
log = "0.4.19"
lazy_static = "1.4.0"
